--- a/MenuCycle.Tests/App.SamsungTabS.config
+++ b/MenuCycle.Tests/App.SamsungTabS.config
@@ -7,15 +7,15 @@
     <reporting keepScreenshot="false" takeScreenshotOnError="false" />
 	<timeout driverCommands="00:03:00"/>
     <capabilities>
-      <add key="platformVersion" value="5.1.1"/>
+      <add key="platformVersion" value="5.0.2"/>
       <add key="clearSystemFiles" value="true"/>
-      <add key="deviceName" value="Nexus 7"/>
+      <add key="deviceName" value="Galaxy Tab S"/>
       <add key="appPackage" value="com.fourth.marketplace.qa"/>
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
-      <add key="browserName" value="Nexus7"/>
-      <add key="version" value="5.1.1"/>
+      <add key="browserName" value="SamsungTabS"/>
+      <add key="version" value="5.0.2"/>
       <add key="platform" value="Android"/>
     </capabilities>
   </fourth>
