--- a/MenuCycle.Tests/App.iPadMini4.config
+++ b/MenuCycle.Tests/App.iPadMini4.config
@@ -14,7 +14,9 @@
       <add key="autoWebview" value="true"/>
       <add key="useNewWDA" value="true"/>
       <add key="bundleId" value="com.fourth.qa"/>
-      <add key="wdaLocalPort" value="8501"/>
+      <add key="browserName" value="iPadMini4"/>
+      <add key="version" value="11.0"/>
+      <add key="platform" value="iOS"/>
     </capabilities>
   </fourth>
 </configuration>
