--- a/MenuCycle.Tests/App.iPhone7.config
+++ b/MenuCycle.Tests/App.iPhone7.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- For more information on using transformations 
-     see the web.config examples at http://go.microsoft.com/fwlink/?LinkId=214134. -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
@@ -17,7 +15,9 @@
       <add key="showXcodeLog" value="true"/> 
       <add key="xcodeOrgId" value="DK2MYTAD7Z" />
       <add key="xcodeSigningId" value="iPhone Developer" />
-      <add key="wdaLocalPort" value="8503"/>
+      <add key="browserName" value="iPhone7"/>
+      <add key="version" value="11.0"/>
+      <add key="platform" value="iOS"/>
     </capabilities>
   </fourth>
 </configuration>
