--- a/MenuCycle.Tests/App.iPhone8.config
+++ b/MenuCycle.Tests/App.iPhone8.config
@@ -5,20 +5,20 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="iOS" serverUrl="http://127.0.0.1:4545/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" xdt:Transform="Replace">
     <capabilities>
-      <add key="deviceName" value="iPhone"/>
-      <add key="platformVersion" value="10.3.2"/>
+      <add key="deviceName" value="UI iPhone8"/>
+      <add key="platformVersion" value="11.4"/>
       <add key="platformName" value="iOS"/>
-      <add key="udid" value="cd1494890f042a8d75e4a2205f623d799094c821"/>-->
+      <add key="udid" value="4f6a68275dce39c59c0563e1b0458d386c567899"/>-->
       <add key="autoWebview" value="true"/>
       <add key="useNewWDA" value="true"/>
       <add key="bundleId" value="com.fourth.qa"/>
       <add key="showXcodeLog" value="true"/> 
       <add key="xcodeOrgId" value="DK2MYTAD7Z" />
       <add key="xcodeSigningId" value="iPhone Developer" />
-      <add key="browserName" value="iPadPro9"/>
-      <add key="version" value="11.1.1"/>
+      <add key="browserName" value="iPhone8"/>
+      <add key="version" value="11.4"/>
       <add key="platform" value="iOS"/>
     </capabilities>
   </fourth>
