--- a/MenuCycle.Tests/App.SamsungS9.config
+++ b/MenuCycle.Tests/App.SamsungS9.config
@@ -3,19 +3,18 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_com.fourth.marketplace" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" driverDirectory="" xdt:Transform="Replace">
-    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
-	<timeout driverCommands="00:03:00"/>
+  <fourth driverType="Android" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" xdt:Transform="Replace">
+    <timeout driverCommands="00:02:00"/>
     <capabilities>
-      <add key="platformVersion" value="5.1.1"/>
+      <add key="platformVersion" value="8.0.0"/>
       <add key="clearSystemFiles" value="true"/>
-      <add key="deviceName" value="Nexus 7"/>
+      <add key="deviceName" value="Galaxy S9"/>
       <add key="appPackage" value="com.fourth.marketplace.qa"/>
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
-      <add key="browserName" value="Nexus7"/>
-      <add key="version" value="5.1.1"/>
+      <add key="browserName" value="SamsungS9"/>
+      <add key="version" value="8.0.0"/>
       <add key="platform" value="Android"/>
     </capabilities>
   </fourth>
