--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -55,7 +55,7 @@
     <add name="SpecFlow.Autofac" type="Runtime"/>
   </plugins>
 <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
-<fourth driverType="" serverUrl="" driverDirectory="">
+<fourth driverType="" serverUrl="aaaaaaa" driverDirectory="">
 	<reporting keepScreenshot="false" takeScreenshotOnError="false"/>
 	<timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
 	<capabilities>
