--- a/MenuCycle.Tests/App.iPadAir.config
+++ b/MenuCycle.Tests/App.iPadAir.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- For more information on using transformations 
-     see the web.config examples at http://go.microsoft.com/fwlink/?LinkId=214134. -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
+<!--    <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>-->
   </appSettings>
-  <fourth driverType="iOS" serverUrl="http://127.0.0.1:4545/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" xdt:Transform="Replace">
     <capabilities>
       <add key="deviceName" value="iPad"/>
       <add key="platformVersion" value="11.2"/>
@@ -16,7 +14,11 @@
       <add key="autoWebview" value="true"/>
       <add key="useNewWDA" value="true"/>
       <add key="bundleId" value="com.fourth.qa"/>
-      <add key="wdaLocalPort" value="8500"/>
+      <add key="browserName" value="iPadAir"/>
+      <add key="version" value="11.2"/>
+      <add key="platform" value="iOS"/>
+      <add key="wdaLocalPort" value="8101"/>
+      <add key="chromeDriverPort" value="9501"/>      
     </capabilities>
   </fourth>
 </configuration>
