--- a/MenuCycle.Tests/App.iPadPro9.config
+++ b/MenuCycle.Tests/App.iPadPro9.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="iOS" serverUrl="http://127.0.0.1:4545/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" xdt:Transform="Replace">
     <capabilities>
       <add key="deviceName" value="iPadPro" />
       <add key="platformVersion" value="11.1.1" />
@@ -14,7 +14,11 @@
       <add key="autoWebview" value="true" />
       <add key="useNewWDA" value="true" />
       <add key="bundleId" value="com.fourth.qa" />
-      <add key="wdaLocalPort" value="8502"/>
+      <add key="browserName" value="iPadPro9"/>
+      <add key="version" value="11.1.1"/>
+      <add key="platform" value="iOS"/>
+      <add key="wdaLocalPort" value="8102"/>
+      <add key="chromeDriverPort" value="9502"/>
     </capabilities>
   </fourth>
 </configuration>
