--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -112,6 +112,31 @@
     <OutputPath>bin\iPhone8</OutputPath>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'SamsungTabA|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\SamsungTabA</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'SamsungTabS|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\SamsungTabS</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Nexus6|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Nexus6</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'iPhone6 Plus|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\iPhone6 Plus</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'RemoteSafari|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\RemoteSafari</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="appium-dotnet-driver, Version=3.0.0.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Appium.WebDriver.3.0.0.2\lib\net45\appium-dotnet-driver.dll</HintPath>
@@ -320,29 +345,29 @@
     <Reference Include="TechTalk.SpecFlow">
       <HintPath>..\packages\SpecFlow.2.3.2\lib\net45\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
-    <Reference Include="Fourth.Automation.Framework.Core">
-      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.0.15\lib\net45\Fourth.Automation.Framework.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Fourth.Automation.SpecFlow.Extensions">
-      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.0.15\lib\net45\Fourth.Automation.SpecFlow.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="SpecFlow.Autofac.SpecFlowPlugin">
-      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.0.15\lib\net45\SpecFlow.Autofac.SpecFlowPlugin.dll</HintPath>
-    </Reference>
-    <Reference Include="Fourth.Automation.Framework.Mobile">
-      <HintPath>..\packages\Fourth.Automation.Framework.Mobile.4.0.15\lib\net45\Fourth.Automation.Framework.Mobile.dll</HintPath>
-    </Reference>
     <Reference Include="FourthApp">
       <HintPath>..\packages\FourthApp.Pages.1.0.2\lib\net46\FourthApp.dll</HintPath>
     </Reference>
     <Reference Include="SpecFlow.Assist.Dynamic">
       <HintPath>..\packages\SpecFlow.Assist.Dynamic.1.3.1\lib\45\SpecFlow.Assist.Dynamic.dll</HintPath>
     </Reference>
-    <Reference Include="Fourth.Automation.Framework.Reporting">
-      <HintPath>..\packages\Fourth.Automation.Framework.Reporting.4.0.15\lib\net45\Fourth.Automation.Framework.Reporting.dll</HintPath>
-    </Reference>
     <Reference Include="Autofac">
       <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Fourth.Automation.Framework.Core">
+      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.0.16\lib\net45\Fourth.Automation.Framework.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Fourth.Automation.SpecFlow.Extensions">
+      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.0.16\lib\net45\Fourth.Automation.SpecFlow.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="SpecFlow.Autofac.SpecFlowPlugin">
+      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.0.16\lib\net45\SpecFlow.Autofac.SpecFlowPlugin.dll</HintPath>
+    </Reference>
+    <Reference Include="Fourth.Automation.Framework.Mobile">
+      <HintPath>..\packages\Fourth.Automation.Framework.Mobile.4.0.16\lib\net45\Fourth.Automation.Framework.Mobile.dll</HintPath>
+    </Reference>
+    <Reference Include="Fourth.Automation.Framework.Reporting">
+      <HintPath>..\packages\Fourth.Automation.Framework.Reporting.4.0.16\lib\net45\Fourth.Automation.Framework.Reporting.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -411,6 +436,7 @@
     <Compile Include="PageObjects\ModalDialogPage.cs" />
     <Compile Include="Support\Helpers\CommonHelpers.cs" />
     <Compile Include="PageObjects\Planning\PlanningTabDays\RecipeRow.cs" />
+    <Compile Include="PageObjects\FourthAppLocalPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
@@ -470,6 +496,13 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="App.SamsungTabA.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="App.Nexus6.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="App.iPhone6 Plus.config" />
+    <None Include="App.RemoteSafari.config">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
