--- a/MenuCycle.Tests/App.SamsungS9.config
+++ b/MenuCycle.Tests/App.SamsungS9.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_com.fourth.marketplace" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="Android" serverUrl="http://10.0.70.8/wd/hub/" xdt:Transform="Replace">
     <timeout driverCommands="00:02:00"/>
     <capabilities>
       <add key="platformVersion" value="8.0.0"/>
