--- a/MenuCycle.Tests/App.iPadAir.config
+++ b/MenuCycle.Tests/App.iPadAir.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-<!--    <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>-->
   </appSettings>
-  <fourth driverType="iOS" serverUrl="https://loud-skunk-31.localtunnel.me/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="http://10.0.70.8/wd/hub/" xdt:Transform="Replace">
     <capabilities>
       <add key="deviceName" value="iPad"/>
       <add key="platformVersion" value="11.2"/>
