--- a/MenuCycle.Tests/App.iPhone6 Plus.config
+++ b/MenuCycle.Tests/App.iPhone6 Plus.config
@@ -3,7 +3,7 @@
   <appSettings>
 <!--    <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>-->
   </appSettings>
-  <fourth driverType="iOS" serverUrl="https://giant-owl-73.localtunnel.me/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="iOS" serverUrl="https://10.0.70.8/wd/hub/" xdt:Transform="Replace">
     <capabilities>
       <add key="deviceName" value="iphone"/>
       <add key="platformVersion" value="11.2.6"/>
