--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -22,6 +22,7 @@
   <package id="Selenium.Firefox.WebDriver" version="0.20.0" targetFramework="net471" />
   <package id="Selenium.Support" version="3.12.1" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.12.1" targetFramework="net471" />
+  <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net471" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net462" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net471" />
   <package id="SpecFlow.Assist.Dynamic" version="1.3.1" targetFramework="net471" />
