Ignore test case - needs data seeding to work

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -359,7 +359,7 @@
     <Compile Include="PageObjects\CalendarDays\DayColumn\MealPeriodDetails\RecipeSearch\RecipeSearch.cs" />
     <Compile Include="PageObjects\CalendarDays\DayColumn\MealPeriodDetails\RecipeSearch\SearchTag.cs" />
     <Compile Include="Features\LocalUserPlanningScreen.feature.cs">
-      <DependentUpon>LocalUser.feature</DependentUpon>
+      <DependentUpon>LocalUserPlanningScreen.feature</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
