--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -94,8 +94,8 @@ node('IE1UIBLD03') {
 				stage ('Copy build artifacts to Mac Mini')
 				 {
 					  //bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 rm -rf /FromJenkins/${projectPath}/${device}/"
-						bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 mkdir -p /FromJenkins/${projectPath}/${device}/"
-						bat "C:/Windows/System32/OpenSSH/scp -r -P 10556 /${projectPath}/bin/${device} UIMCM@0.tcp.ngrok.io:/FromJenkins/${projectPath}/${device}/"
+						bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 mkdir -p ~/FromJenkins/${projectPath}/${device}/"
+						bat "C:/Windows/System32/OpenSSH/scp -r -P 10556 ./${projectPath}/bin/${device} UIMCM@0.tcp.ngrok.io:~/FromJenkins/${projectPath}/${device}/"
 				}
 		} catch (e) {
 				echo e.message
@@ -189,7 +189,7 @@ def runTestsRemote(device)
 {
     if (Include_Tags == '' && Exclude_Tags == ''){
         print "Not tag to include or exclude. Running all tests"
-        bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/nunit-console /FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -output=${device}TestResults.xml;format=nunit2 --framework:net-4.5"
+        bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/nunit-console ~/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -output=${device}TestResults.xml;format=nunit2 --framework:net-4.5"
     }
     else
     {
@@ -227,7 +227,7 @@ def runTestsRemote(device)
       print "Including tags:  ${Include_Tags}"
 			print "Excluding tags:  ${Exclude_Tags}"
 
-			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/nunit-console /FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -output=${device}TestResults.xml;format=nunit2 --framework:net-4.5 -where \"${include}${and}${exclude}\""
+			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/nunit-console ~/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -output=${device}TestResults.xml;format=nunit2 --framework:net-4.5 -where \"${include}${and}${exclude}\""
     }
 }
 
