--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -58,7 +58,7 @@ node('IE1UIBLD03') {
 	}
 
 	// Chech for include tags in Job Name
-	['Remote', 'Smoke', 'QAI', 'UAT', 'PRELIVE', 'EMEA', 'NA'].each
+	['Smoke', 'QAI', 'UAT', 'PRELIVE', 'EMEA', 'NA'].each
 	{
 		if (jobName.contains("${it}"))
 		{
@@ -88,7 +88,7 @@ node('IE1UIBLD03') {
 			currentBuild.result = "FAILED"
 	}
 
-	if (Include_Tags.contains("Remote"))
+	if (jobName.contains("Remote"))
 	{
 		try {
 				stage ('Copy build artifacts to Mac Mini')
@@ -106,7 +106,7 @@ node('IE1UIBLD03') {
 	try {
 			stage ('Run Tests')
 			{
-				if (Include_Tags.contains("Remote"))
+				if (jobName.contains("Remote"))
 				{
 					runTestsRemote(device)
 				}
@@ -189,7 +189,7 @@ def runTestsRemote(device)
 {
     if (Include_Tags == '' && Exclude_Tags == ''){
         print "Not tag to include or exclude. Running all tests"
-        bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono ~/NUnit.Console-3.8.0/nunit3-console.exe --nologo --noshadow ~/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --result:${device}TestResults.xml;format=nunit2 --framework:net-4.5"
+        bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono \"/Users/uimcm/NUnit.Console-3.8.0/nunit3-console.exe --nologo --noshadow /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --result:${device}TestResults.xml;format=nunit2 --framework:net-4.5"\"
     }
     else
     {
@@ -227,7 +227,7 @@ def runTestsRemote(device)
       print "Including tags:  ${Include_Tags}"
 			print "Excluding tags:  ${Exclude_Tags}"
 
-			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono ~/NUnit.Console-3.8.0/nunit3-console.exe --nologo --noshadow ~/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --result:${device}TestResults.xml;format=nunit2 --framework:net-4.5 --where:\"${include}${and}${exclude}\""
+			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono \"Users/uimcm/NUnit.Console-3.8.0/nunit3-console.exe --nologo --noshadow Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --result:${device}TestResults.xml;format=nunit2 --framework:net-4.5 --where:\"${include}${and}${exclude}\""\"
     }
 }
 
