--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -227,7 +227,7 @@ def runTestsRemote(device)
       print "Including tags:  ${Include_Tags}"
 			print "Excluding tags:  ${Exclude_Tags}"
 
-			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono /Users/uimcm/NUnit.Console-3.8.0/nunit3-console.exe /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll --where:\"${include}${and}${exclude}\" --result:${device}TestResults.xml;format=nunit2"
+			bat "C:/Users/Jenkins/ssh.exe UIMCM@0.tcp.ngrok.io -p10556 /Library/Frameworks/Mono.framework/Versions/Current/Commands/mono /Users/uimcm/NUnit.Console-3.8.0/nunit3-console.exe /Users/uimcm/FromJenkins/${projectPath}/${device}/MenuCycle.Tests.dll -where:\"${include}${and}${exclude}\" --result:${device}TestResults.xml;format=nunit2"
 		}
 }
 
